--- a/index.html
+++ b/index.html
@@ -12,19 +12,24 @@
   </head>
 
   <body>
-    <main>
-      <header>
-        <h1>Character Codes</h1>
-      </header>
+    <header>
+      <h1>Character Codes</h1>
+    </header>
 
-      <footer>
-        <p>
-          <a href="https://github.com/tomleese/charcodes">Code</a> is available
-          on GitHub &mdash; <a href="http://tomleese.me.uk">Click here</a> to find out
-          more about the person who made this.
-        </p>
-      </footer>
+    <main>
+      <input type="text" name="query" placeholder="Type something in here&hellip;" />
+
+      <ul>
+      </ul>
     </main>
+
+    <footer>
+      <p>
+        <a href="https://github.com/tomleese/charcodes">Code</a> is available
+        on GitHub &mdash; <a href="http://tomleese.me.uk">Click here</a> to find out
+        more about the person who made this.
+      </p>
+    </footer>
   </body>
 
 </html>
