Add initial script

--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
     <main>
       <input type="text" name="query" placeholder="Type something in here&hellip;" />
 
-      <ul>
-      </ul>
+      <ul></ul>
+      <p></p>
+      <p></p>
     </main>
 
     <footer>
       <p>
-        <a href="https://github.com/tomleese/charcodes">Code</a> is available
-        on GitHub &mdash; <a href="http://tomleese.me.uk">Click here</a> to find out
-        more about the person who made this.
+        <a href="https://github.com/tomleese/charcodes">Build and designed</a>
+        by <a href="http://tomleese.me.uk">Tom Leese</a>.
       </p>
     </footer>
+
+    <script src="scripts/main.js"></script>
   </body>
 
 </html>
