--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <footer>
       <p>
-        <a href="https://github.com/tomleese/charcodes">Build and designed</a>
+        <a href="https://github.com/tomleese/charcodes">Built and designed</a>
         by <a href="http://tomleese.me.uk">Tom Leese</a>.
       </p>
     </footer>
