--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <footer>
       <p>
-        <a href="https://github.com/tomleese/charcodes">Built and designed</a>
-        by <a href="http://tomleese.me.uk">Tom Leese</a>.
+        <a href="https://github.com/thomasleese/charcodes">Built and designed</a>
+        by <a href="https://thomas.leese.io">Thomas Leese</a>.
       </p>
     </footer>
 
